fixed t-align and font size

--- a/styles/Esperanto.module.css
+++ b/styles/Esperanto.module.css
@@ -16,7 +16,7 @@
 
 .blurb {
   font-family: system-ui;
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
 }
 
@@ -72,7 +72,4 @@
 }
 
 @media screen and (max-width: 480px) {
-  .resources {
-    text-align: center;
-  }
 }
